Row Cell Preview Size: Prevent Jump When Clicking Input

--- a/css/admin.less
+++ b/css/admin.less
@@ -1869,6 +1869,15 @@
 							z-index: 2;
 						}
 
+						.preview-cell-weight {
+							padding: 10px 22px 10px 5px;
+
+						}
+
+						.preview-cell-weight-input {
+							padding: 10px 5px;
+						}
+
 						.preview-cell-weight,
 						.preview-cell-weight-input {
 							background: #fff;
@@ -1877,7 +1886,6 @@
 							line-height: 1.4em !important;
 							margin: -0.95em 0 0 -40px;
 							overflow: hidden;
-							padding: 10px 5px;
 							position: absolute;
 							text-align: center;
 							width: 80px;
